tree-sitter-angelscript/test/corpus/group_a_fixes.txt
==================
A1. Nested Namespaces - 2 levels
==================

namespace Engine {
  namespace Graphics {
    enum RenderMode { Mode_2D, Mode_3D }
  }
}

---

(script
  (namespace_declaration
    name: (identifier)
    body: (namespace_body
      (namespace_declaration
        name: (identifier)
        body: (namespace_body
          (enum_declaration
            name: (identifier)
            (enum_member
              name: (identifier))
            (enum_member
              name: (identifier))))))))

==================
A1. Nested Namespaces - 3 levels
==================

namespace Game {
  namespace Systems {
    namespace Physics {
      class Body { void Update() {} }
    }
  }
}

---

(script
  (namespace_declaration
    name: (identifier)
    body: (namespace_body
      (namespace_declaration
        name: (identifier)
        body: (namespace_body
          (namespace_declaration
            name: (identifier)
            body: (namespace_body
              (class_declaration
                name: (identifier)
                body: (class_body
                  (func_declaration
                    return_type: (type (datatype (primitive_type)))
                    name: (identifier)
                    parameters: (parameter_list)
                    body: (statement_block)))))))))))

==================
A1. Nested Namespaces - 4 levels
==================

namespace Level1 {
  namespace Level2 {
    namespace Level3 {
      namespace Level4 {
        funcdef void Callback();
      }
    }
  }
}

---

(script
  (namespace_declaration
    name: (identifier)
    body: (namespace_body
      (namespace_declaration
        name: (identifier)
        body: (namespace_body
          (namespace_declaration
            name: (identifier)
            body: (namespace_body
              (namespace_declaration
                name: (identifier)
                body: (namespace_body
                  (funcdef_declaration
                    return_type: (type (datatype (primitive_type)))
                    name: (identifier)
                    parameters: (parameter_list)))))))))))

==================
A2. Interface Property with Semicolon - Variant 1
==================

interface IShape {
  float area() const;
  int sides { get; };
}

---

(script
  (interface_declaration
    name: (identifier)
    body: (interface_body
      (interface_method
        return_type: (type (datatype (primitive_type)))
        name: (identifier)
        parameters: (parameter_list))
      (virtual_property
        prop_type: (type (datatype (primitive_type)))
        name: (identifier)
        (accessor)))))

==================
A2. Interface Property with Semicolon - Variant 2
==================

interface IWidget {
  int width { get; set; };
  int height { get; set; };
}

---

(script
  (interface_declaration
    name: (identifier)
    body: (interface_body
      (virtual_property
        prop_type: (type (datatype (primitive_type)))
        name: (identifier)
        (accessor)
        (accessor))
      (virtual_property
        prop_type: (type (datatype (primitive_type)))
        name: (identifier)
        (accessor)
        (accessor)))))

==================
A2. Class Virtual Property with Trailing Semicolon - Variant 3
==================

class Component {
  float speed { get; };
}

---

(script
  (class_declaration
    name: (identifier)
    body: (class_body
      (virtual_property
        prop_type: (type (datatype (primitive_type)))
        name: (identifier)
        (accessor)))))

==================
A3. Lambda Anonymous in Handle Assignment - Variant 1
==================

funcdef int ComputeHandler(int factor);
class Processor {
  ComputeHandler@ handler;
  void Init() {
    @handler = function(int x) { return x * 42; };
  }
}

---

(script
  (funcdef_declaration
    return_type: (type (datatype (primitive_type)))
    name: (identifier)
    parameters: (parameter_list
      (parameter
        param_type: (type (datatype (primitive_type)))
        name: (identifier))))
  (class_declaration
    name: (identifier)
    body: (class_body
      (variable_declaration
        var_type: (type (datatype (identifier)))
        (variable_declarator
          name: (identifier)))
      (func_declaration
        return_type: (type (datatype (primitive_type)))
        name: (identifier)
        parameters: (parameter_list)
        body: (statement_block
          (expression_statement
            (assignment_expression
              left: (unary_expression
                operand: (identifier))
              right: (lambda_expression
                parameters: (parameter_list
                  (parameter
                    param_type: (type (datatype (primitive_type)))
                    name: (identifier)))
                body: (statement_block
                  (return_statement
                    value: (binary_expression
                      left: (identifier)
                      right: (number_literal))))))))))))

==================
A3. Lambda Anonymous in Handle Assignment - Variant 2
==================

class Controller {
  void Bind() {
    @cb = function(a) { return a + 1; };
  }
}

---

(script
  (class_declaration
    name: (identifier)
    body: (class_body
      (func_declaration
        return_type: (type (datatype (primitive_type)))
        name: (identifier)
        parameters: (parameter_list)
        body: (statement_block
          (expression_statement
            (assignment_expression
              left: (unary_expression
                operand: (identifier))
              right: (lambda_expression
                parameters: (parameter_list
                  (parameter
                    param_type: (type (datatype (identifier)))))
                body: (statement_block
                  (return_statement
                    value: (binary_expression
                      left: (identifier)
                      right: (number_literal))))))))))))

==================
A3. Lambda Anonymous in Handle Assignment - Variant 3
==================

class Action {
  void Exec() {
    @fn = function() { return 10; };
  }
}

---

(script
  (class_declaration
    name: (identifier)
    body: (class_body
      (func_declaration
        return_type: (type (datatype (primitive_type)))
        name: (identifier)
        parameters: (parameter_list)
        body: (statement_block
          (expression_statement
            (assignment_expression
              left: (unary_expression
                operand: (identifier))
              right: (lambda_expression
                parameters: (parameter_list)
                body: (statement_block
                  (return_statement
                    value: (number_literal)))))))))))
